Estruturação do CBV

--- a/base_templates/global/pages/menu.html
+++ b/base_templates/global/pages/menu.html
@@ -13,15 +13,24 @@
                         Menu
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'consulta-cliente' %}"><i class="fa-solid fa-users"></i> Clientes</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-pais' %}"><i class="fa-solid fa-earth-americas"></i> Países</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-estado' %}"><i class="fa-solid fa-map-location-dot"></i> Estados</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-cidade' %}"><i class="fa-solid fa-city"></i> Cidades</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-formapagto' %}"><i class="fa-solid fa-money-bill"></i> Formas de Pagamento</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-condicaopagto' %}"><i class="fa-sharp fa-solid fa-money-check-dollar"></i> Condições de Pagamento</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-cor' %}"><i class="fa-solid fa-swatchbook"></i> Cores</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-tamanho' %}"><i class="fa-solid fa-ruler-vertical"></i> Tamanhos</a></li>
-                        <li><a class="dropdown-item" href="{% url 'consulta-pedido' %}"><i class="fa-solid fa-pen-to-square"></i> Pedidos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-cliente' %}"><i
+                                    class="fa-solid fa-users"></i> Clientes</a></li>
+                        <li><a class="dropdown-item" href="{% url 'pais:lista-pais' %}"><i
+                                    class="fa-solid fa-earth-americas"></i> Países</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-estado' %}"><i
+                                    class="fa-solid fa-map-location-dot"></i> Estados</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-cidade' %}"><i class="fa-solid fa-city"></i>
+                                Cidades</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-formapagto' %}"><i
+                                    class="fa-solid fa-money-bill"></i> Formas de Pagamento</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-condicaopagto' %}"><i
+                                    class="fa-sharp fa-solid fa-money-check-dollar"></i> Condições de Pagamento</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-cor' %}"><i
+                                    class="fa-solid fa-swatchbook"></i> Cores</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-tamanho' %}"><i
+                                    class="fa-solid fa-ruler-vertical"></i> Tamanhos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'consulta-pedido' %}"><i
+                                    class="fa-solid fa-pen-to-square"></i> Pedidos</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
