--- a/base_templates/global/pages/base.html
+++ b/base_templates/global/pages/base.html
@@ -3,12 +3,6 @@
 <html lang="pt-br">
 
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.13.4/i18n/pt-BR.json"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/javascript.js' %}"></script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -20,36 +14,48 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'global/css/style.css'%}" />
-    <link rel="icon" type="image/x-icon" href="{% block icon %}{% endblock %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{% block title %}{% endblock %}</title>
+
 </head>
 
 <body>
-    <div class="modal fade" id="myModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="myModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="myModalLabel"></h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- O conteúdo da modal será adicionado aqui via AJAX -->
-                    {% block modal-content %}{% endblock  %}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
+    {% block modal %}
+        <div id="modalBase" class="modal fade" data-bs-backdrop="static" tabindex="-1" aria-labelledby="modalBaseLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modalBaseLabel"></h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                    </div>
+                    <div class="modal-body">                                                
+                    </div>
+                    <div class="modal-footer">                        
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    {% include './menu.html' %}
-    <div class="main-content container consulta">
+    {% endblock  %}
+
+    {% block menu %}
+    <div>{% include './menu.html' %}</div>
+    {% endblock %}
+    {% block div-content %}
+    <div class="main-content container consulta mt-2">
         {% block content %}{% endblock %}
     </div>
+    {% endblock %}
+    {% block scripts %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/DataTableLang.js' %}"></script>
+    <script src="{% static 'js/JavaScript.js' %}"></script>
+    {% comment %} Caso necessário adicionar mais script utilizar o block.super {% endcomment %}
+    {% endblock %}
 </body>
+{% block footer %}
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{% url 'inicio' %}" class="nav-link px-2 text-muted">Página Inicial</a></li>
@@ -60,5 +66,6 @@
     </ul>
     <p class="text-center text-muted">© 2023 STORE</p> <!--EMPRESA-->
 </footer>
+{% endblock %}
 
 </html>
